# muon-lifetime

./: .gitignore  .gitmodules  README.md
docs/: multi_board_gt.ezdraw  trigger_logic.ezdraw
docs/manual/: manual_rev11.doc  manual_rev20.doc  multi-board.ezdraw
firmware/: register_map_eval5.xls
firmware/3s400/: drs4_eval5.bit  drs4_eval5.ipf  drs4_eval5.xise
software/: .gitignore  CMakeLists.txt
software/drscl/: CMakeLists.txt  Makefile  drs_exam.cpp  drs_exam.sln  drs_exam.vcproj  drs_exam.vcxproj  drs_exam.vcxproj.filters  drs_exam_2048.cpp  drs_exam_multi.cpp  drs_scaler.cpp  drs_scaler.sln  drs_scaler.vcxproj  drscl.cpp  drscl.sln  drscl.vcproj  drscl.vcxproj  drscl.vcxproj.filters
software/drscl/drs_exam.xcodeproj/: project.pbxproj
software/drscl/drs_exam_multi.xcodeproj/: project.pbxproj
software/drscl/drscl.xcodeproj/: project.pbxproj
software/drsosc/: CMakeLists.txt  ConfigDialog.cpp  DOFrame.cpp  DOFrame.h  DOScreen.cpp  DRSOsc.cpp  DRSOsc.h  Makefile  Osci.cpp  Osci.h  TriggerDialog.cpp  dist.csv  drsosc.fbp  drsosc.rc  drsosc.sln  drsosc.vcproj  drsosc.vcxproj  drsosc.vcxproj.filters  rb.cpp  read_binary.C  read_binary.cpp
software/drsosc/Icons.xcassets/AppIcon.appiconset/: Contents.json
software/drsosc/drsosc.xcodeproj/: Info.plist  Prefix.pch  project.pbxproj
software/drsosc/read_binary.xcodeproj/: project.pbxproj
software/include/: DRS.h  musbstd.h
software/libusb-1.0/: drs4_eval5.inf  libusb-1.0.lib  libusb.h
software/midas_fe/: CMakeLists.txt  drs4_fe.cpp
software/src/: DRS.cpp  musbstd.c
